// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App App 1`] = `
<div
  id="app"
>
  <img
    src="./logo.png"
  />
   
  <h1 />
   
  <h2>
    Essential Links
  </h2>
   
  <ul>
    <li>
      <a
        href="https://vuejs.org"
        target="_blank"
      >
        Core Docs
      </a>
    </li>
     
    <li>
      <a
        href="https://forum.vuejs.org"
        target="_blank"
      >
        Forum
      </a>
    </li>
     
    <li>
      <a
        href="https://gitter.im/vuejs/vue"
        target="_blank"
      >
        Gitter Chat
      </a>
    </li>
     
    <li>
      <a
        href="https://twitter.com/vuejs"
        target="_blank"
      >
        Twitter
      </a>
    </li>
  </ul>
   
  <h2>
    Ecosystem
  </h2>
   
  <ul>
    <li>
      <a
        href="http://router.vuejs.org/"
        target="_blank"
      >
        vue-router
      </a>
    </li>
     
    <li>
      <a
        href="http://vuex.vuejs.org/"
        target="_blank"
      >
        vuex
      </a>
    </li>
     
    <li>
      <a
        href="http://vue-loader.vuejs.org/"
        target="_blank"
      >
        vue-loader
      </a>
    </li>
     
    <li>
      <a
        href="https://github.com/vuejs/awesome-vue"
        target="_blank"
      >
        awesome-vue
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Button rounded 1`] = `
<button
  class="button rounded"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  A Button with rounded edges!
</button>
`;

exports[`Storyshots Button square 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  A Button with square edges!
</button>
`;

exports[`Storyshots Welcome Welcome 1`] = `
<div
  class="main"
>
  <h1>
    Welcome to Storybook for Vue
  </h1>
   
  <p>
    
    This is a UI component dev environment for your vue app.
  
  </p>
   
  <p>
    
    We've added some basic stories inside the
    
    <code
      class="code"
    >
      src/stories
    </code>
    
    directory.
    
    <br />
    
    A story is a single state of one or more UI components.
    You can have as many stories as you want.
    
    <br />
    
    (Basically a story is like a visual test case.)
  
  </p>
   
  <p>
    
    See these sample
    
    <a
      class="link"
    >
      stories
    </a>
    
    for a component called
    
    <code
      class="code"
    >
      Button
    </code>
    
    .
  
  </p>
   
  <p
    style="text-align: center;"
  >
    <img
      src="../logo.png"
    />
  </p>
   
  <p>
    
    Just like that, you can add your own components as stories.
    
    <br />
    
    You can also edit those components and see changes right away.
    
    <br />
    
    (Try editing the 
    <code
      class="code"
    >
      Button
    </code>
     component
    located at 
    <code
      class="code"
    >
      src/stories/Button.js
    </code>
    .)
  
  </p>
   
  <p>
    
    Usually we create stories with smaller UI components in the app.
    <br />
    
    Have a look at the
    
    <a
      class="link"
      href="https://storybook.js.org/basics/writing-stories"
      target="_blank"
    >
      
      Writing Stories
    
    </a>
    
    section in our documentation.
  
  </p>
   
  <p
    class="note"
  >
    <b>
      NOTE:
    </b>
     
    <br />
    
    Have a look at the
    
    <code
      class="code"
    >
      .storybook/webpack.config.js
    </code>
    
    to add webpack
    loaders and plugins you are using in this project.
  
  </p>
</div>
`;
